# tinyrpc_s

./: README.md
test/: CMakeLists.txt  README.md  test_tinypb_server.cc  test_tinypb_server.pb.h  test_tinypb_server.xml
test_generator/: order_server.proto  tinyrpc_generator.py
test_generator/order_server/conf/: order_server.xml
test_generator/order_server/order_server/: main.cc  makefile
test_generator/order_server/order_server/comm/: business_exception.h
test_generator/order_server/order_server/interface/: delete_order.cc  delete_order.h  make_order.cc  make_order.h  query_order_detail.cc  query_order_detail.h
test_generator/order_server/order_server/pb/: order_server.pb.cc  order_server.pb.h
test_generator/order_server/order_server/service/: order_server.cc  order_server.h
test_generator/order_server/test_client/: test_delete_order_client.cc  test_make_order_client.cc  test_query_order_detail_client.cc
test_http/: CMakeLists.txt  test_http_server.cc  test_http_server.xml  test_tinypb_server.proto
